updated podcastIconimg, updated full process image, fixed Our Process font, aligned Howl at Us Button

--- a/src/Components/podcast.css
+++ b/src/Components/podcast.css
@@ -207,6 +207,13 @@ h1.find-ar {
   height: 180px;
 }
 
+.our-process-header{
+  font-family: Helvetica, sans-serif;
+  font-weight: 100;
+  font-size: 1.3em;
+  margin: 0;
+}
+
 .paws-on-paragraph {
   font-size: 2.2em;
   width: 82%;
